multiple server blocks random cool maybe

--- a/random.conf
+++ b/random.conf
@@ -1,4 +1,15 @@
 server {
+	listen 7000;
+	server_name localhost;
+	root /var;
+	index index.html;
+
+	location /www {
+		root /var/www/;
+	}
+}
+
+server {
 	listen 127:0:0:1:8080;
 	listen 8080;
 	server_name localhost;
@@ -27,5 +38,16 @@ server {
 	location /cgi-bin {
 		autoindex on;
 		cgi_extension cgi;
+	}
+}
+
+server {
+	listen 9000;
+	server_name localhost;
+	root /var;
+	index index.html;
+
+	location /www {
+		root /var/www/;
 	}
 }
