redirect in simple conf and thinking about plans to parse the server blocks

--- a/configs/simplem.conf
+++ b/configs/simplem.conf
@@ -15,20 +15,23 @@ server {
 
 	location /www {
 		root /var/www/;
-		index defaultwww.html;
+		index index.html;
 	}
 	location /img {
 		root /var/img/;
-		index defaultimg.html;
+		index raccoon.jpg;
 	}
 	location /test {
 		root /var/test/;
-		index defaulttest.html;
+		index one.html;
 	}
 	location /cgi-bin {
 		root /var/cgi-bin/;
 		autoindex on;
 		cgi_extension cgi;
+	}
+	location /redirect {
+		return 301 /test;
 	}
 }
 
