redirect config and the file for it

--- a/configs/config.conf
+++ b/configs/config.conf
@@ -2,33 +2,15 @@ server {
 	listen 8080;
 	root ./var/www;
 	server_name localhost;
-	location / {
-		client_max_body_size 1G;
+	error_page 403 /403.html;
 
-		index index.html /index.html;
-
-		error_page 403 /403.html 404 /404.html;
-		allowMethods GET POST DELETE;
-	}
-	
 	location /cgi-bin {
+		root /var/cgi-bin;
 		autoindex on;
 		cgi_extension cgi;
-		cgi_allowed true;
-	}
-
-	location /upload {
-		allowMethods GET DELETE;
 	}
 
 	location /redirect {
-		# return 303 /redirect.html;
-	}
-
-	location /error_img {
-		allowMethods GET;
-	}
-
-	location /test {
+		return 303 /var/www/redirect.html;
 	}
 }
