rm parts not used or non existant

--- a/configs/loc_err.conf
+++ b/configs/loc_err.conf
@@ -11,7 +11,6 @@ server {
 }
 
 server {
-	listen 127:0:0:1:8080;
 	listen 8080;
 	server_name localhost;
 	root /var;
@@ -21,20 +20,16 @@ server {
 
 	location /www {
 		root /var/www/;
-		index defaultwww.html;
-		allow GET POST;
-		deny DELETE;
+		index index.html;
 	}
 	location /img {
 		root /var/img/;
-		index defaultimg.html;
-		allow GET;
+		index thumbs-up.jpg;
 	}
 	location /test {
 		root /var/test/;
-		index defaulttest.html;
-		autoindex off
-		deny ALL;
+		index two.html;
+		autoindex off;
 	}
 	location /cgi-bin {
 		autoindex on;
