--- a/configs/random.conf
+++ b/configs/random.conf
@@ -18,20 +18,16 @@ server {
 
 	location /www {
 		root /var/www/;
-		index defaultwww.html;
-		allow GET POST;
-		deny DELETE;
+		index index.html;
 	}
 	location /img {
 		root /var/img/;
-		index defaultimg.html;
-		allow GET;
+		index giraffe.jpg;
 	}
 	location /test {
 		root /var/test/;
-		index defaulttest.html;
-		autoindex off
-		deny ALL;
+		index two.html;
+		autoindex off;
 	}
 	location /cgi-bin {
 		autoindex on;
