rm semicolon again, check mandatory parts for location blocks, check redirect stuff, rm std leftovers

--- a/configs/simplem.conf
+++ b/configs/simplem.conf
@@ -3,30 +3,30 @@ server {
 	root /var;
 	index index.html;
 	location /www {
-		root /var/www/;
+		root ./var/www/;
 	}
 }
 
 server {
 	listen 8080;
 	server_name localhost;
-	root /var;
+	root ./var;
 	index index.html;
 
 	location /www {
-		root /var/www/;
+		root ./var/www/;
 		index index.html;
 	}
 	location /img {
-		root /var/img/;
+		root ./var/img/;
 		index raccoon.jpg;
 	}
 	location /test {
-		root /var/test/;
+		root ./var/test/;
 		index one.html;
 	}
 	location /cgi-bin {
-		root /var/cgi-bin/;
+		root ./var/cgi-bin/;
 		autoindex on;
 		cgi_extension cgi;
 	}
@@ -38,10 +38,10 @@ server {
 server {
 	listen 9000;
 	server_name localhost;
-	root /var;
+	root ./var;
 	index index.html;
 
 	location /www {
-		root /var/www/;
+		root ./var/www/;
 	}
 }
