root needs to have dot so can actually find the path since its relative

--- a/configs/config.conf
+++ b/configs/config.conf
@@ -5,7 +5,7 @@ server {
 	error_page 403 /403.html;
 
 	location /cgi-bin {
-		root /var/cgi-bin;
+		root ./var/cgi-bin;
 		autoindex on;
 		cgi_extension cgi;
 	}
