--- a/configs/random.conf
+++ b/configs/random.conf
@@ -1,9 +1,9 @@
 server {
 	listen 7000;
-	root /var;
+	root ./var;
 	index index.html;
 	location /www {
-		root /var/www/;
+		root ./var/www/;
 	}
 }
 
@@ -11,21 +11,21 @@ server {
 	listen 127:0:0:1:8080;
 	listen 8080;
 	server_name localhost;
-	root /var;
+	root ./var;
 	index index.html;
 
 	default_err 404 /error.html;
 
 	location /www {
-		root /var/www/;
+		root ./var/www/;
 		index index.html;
 	}
 	location /img {
-		root /var/img/;
+		root ./var/img/;
 		index giraffe.jpg;
 	}
 	location /test {
-		root /var/test/;
+		root ./var/test/;
 		index two.html;
 		autoindex off;
 	}
@@ -38,10 +38,10 @@ server {
 server {
 	listen 9000;
 	server_name localhost;
-	root /var;
+	root ./var;
 	index index.html;
 
 	location /www {
-		root /var/www/;
+		root ./var/www/;
 	}
 }
