--- a/configs/server_err.conf
+++ b/configs/server_err.conf
@@ -1,11 +1,11 @@
 server {
 	listen 7000;
 	server_name localhost;
-	root /var;
+	root ./var;
 	index index.html;
 
 	location /www {
-		root /var/www/;
+		root ./var/www/;
 	}
 }
 }
@@ -13,21 +13,21 @@ server {
 server {
 	listen 8080;
 	server_name localhost;
-	root /var;
+	root ./var;
 	index index.html;
 
 	default_err 404 /error.html;
 
 	location /www {
-		root /var/www/;
+		root ./var/www/;
 		index index.html;
 	}
 	location /img {
-		root /var/img/;
+		root ./var/img/;
 		index thumbs-up.jpg;
 	}
 	location /test {
-		root /var/test/;
+		root ./var/test/;
 		index two.html;
 		autoindex off;
 	}
@@ -40,10 +40,10 @@ server {
 server {
 	listen 9000;
 	server_name localhost;
-	root /var;
+	root ./var;
 	index index.html;
 
 	location /www {
-		root /var/www/;
+		root ./var/www/;
 	}
 }
