--- a/configs/simplem.conf
+++ b/configs/simplem.conf
@@ -13,6 +13,8 @@ server {
 	root ./var;
 	index index.html;
 
+	error_page 404 /error/404.html;
+
 	location /www {
 		root ./var/www/;
 		index index.html;
