--- a/configs/simplem.conf
+++ b/configs/simplem.conf
@@ -13,6 +13,7 @@ server {
 	root ./var;
 	index index.html;
 
+	error_page 401 /error/401.html;
 	error_page 404 /error/404.html;
 
 	location /www {
