deny directive for location blocks

--- a/configs/simplem.conf
+++ b/configs/simplem.conf
@@ -4,6 +4,7 @@ server {
 	index index.html;
 	location /www {
 		root ./var/www/;
+		deny DELETE POST;
 	}
 }
 
@@ -23,6 +24,7 @@ server {
 	location /img {
 		root ./var/img/;
 		index raccoon.jpg;
+		deny POST DELETE;
 	}
 	location /test {
 		root ./var/test/;
