checking outside of server blocks

--- a/configs/test.conf
+++ b/configs/test.conf
@@ -1,1 +1,21 @@
+server {
+	listen 7000;
+	root ./var;
+	index index.html;
+	location /www {
+		root ./var/www/;
+		deny DELETE POST;
+	}
+}
 
+{ bla }
+
+server {
+	listen 9000;
+	server_name localhost;
+	root ./var;
+	index index.html;
+	location /www { 
+		root ./var/www/;
+	} 
+}
