--- a/default.conf
+++ b/default.conf
@@ -2,8 +2,19 @@ server {
 	listen 8080;
 	server_name localhost;
 	root ./var;
+	error_page 404 /error/404.html;
+	error_page 405 /error/405.html;
 	index index.html;
+	location /www {
+		root ./var/www/;
+	}
+}
 
+server {
+	listen 8181;
+	server_name localhost;
+	root ./www;
+	index index.html;
 	location /www {
 		root ./var/www/;
 	}
