--- a/default.conf
+++ b/default.conf
@@ -1,9 +1,7 @@
 server {
-	listen 8080;
+	listen 8081;
 	server_name localhost;
-	root ./var;
-	error_page 404 /error/404.html;
-	error_page 405 /error/405.html;
+	root ./www;
 	index index.html;
 	location /www {
 		root ./var/www/;
