Server class ready

--- a/default.conf
+++ b/default.conf
@@ -2,6 +2,7 @@ server {
 	listen 8081;
 	server_name localhost;
 	root ./www;
+	client_max_body_size 2;
 	index index.html;
 	location /www {
 		root ./var/www/;
