now checking in /etc/hosts

--- a/configs/simplem.conf
+++ b/configs/simplem.conf
@@ -31,7 +31,8 @@ server {
 }
 
 server {
-	listen 127.0.0.1:7000;
+	listen 127.0.1.1:7000;
+	server_name dump-linux;
 	root ./var;
 	index index.html;
 	location /www {
