alot of stuff done

--- a/default.conf
+++ b/default.conf
@@ -1,10 +1,19 @@
 server {
-	listen 8081;
-	server_name localhost;
-	root ./www;
-	client_max_body_size 2;
+	listen 127.0.0.1:7000;
+	root ./var;
 	index index.html;
 	location /www {
 		root ./var/www/;
+		deny DELETE POST;
+	}
+}
+
+server {
+	listen 127.0.0.1:7001;
+	root ./var;
+	index index.html;
+	location /www {
+		root ./var/www/;
+		deny DELETE POST;
 	}
 }
