--- a/configs/simplem.conf
+++ b/configs/simplem.conf
@@ -5,7 +5,7 @@ server {
 	index index.html;
 
 	error_page 401 /error/401.html;
-	error_page 404 /error/404.html;
+	error_page 404 /img/confused_man_laptop.jpg;
 
 	location /www {
 		root ./var/www/;
