--- a/configs/simplem.conf
+++ b/configs/simplem.conf
@@ -5,7 +5,7 @@ server {
 	index index.html;
 
 	error_page 401 /error/401.html;
-	error_page 404 /error/404.html;
+	error_page 404 /img/confused_man_laptop.jpg;
 
 	location /www {
 		root ./var/www/;
@@ -32,7 +32,7 @@ server {
 
 server {
 	listen 127.0.1.1:7000;
-	server_name dump-linux;
+	server_name localhost;
 	root ./var;
 	index index.html;
 	location /www {
