using the actual path of the rror page and checking if it works correctly

--- a/configs/simplem.conf
+++ b/configs/simplem.conf
@@ -5,6 +5,7 @@ server {
 	index index.html;
 
 	error_page 401 /error/401.html;
+	error_page 412 /index.html;
 	error_page 404 /img/confused_man_laptop.jpg;
 
 	location /www {
