--- a/default.conf
+++ b/default.conf
@@ -10,10 +10,10 @@ server {
 
 server {
 	listen 127.0.0.1:7003;
-	root ./var;
+	root ./www;
 	index index.html;
 	location /www {
-		root ./var/www/;
+		root ./www/;
 		deny DELETE POST;
 	}
 }
