--- a/default.conf
+++ b/default.conf
@@ -17,3 +17,13 @@ server {
 		deny DELETE POST;
 	}
 }
+
+server {
+	listen 127.0.0.1:7003;
+	root ./var/test;
+	index one.html;
+	location /www {
+		root ./www/;
+		deny DELETE POST;
+	}
+}
