added the index.html that isly uses to simplem that i call with: ./run.sh simplem

--- a/configs/simplem.conf
+++ b/configs/simplem.conf
@@ -29,6 +29,10 @@ server {
 	location /redirect {
 		return 301 /test;
 	}
+	location /otherwww {
+		root ./www/;
+		index index.html;
+	}
 }
 
 server {
