fixed baseline default file checking for styles or checking another localhost:xxxx/file

--- a/configs/simplem.conf
+++ b/configs/simplem.conf
@@ -49,7 +49,7 @@ server {
 server {
 	listen 127.0.0.1:9000;
 	server_name localhost;
-	root ./var;
+	root ./www;
 	index index.html;
 
 	location /www {
