--- a/configs/simplem.conf
+++ b/configs/simplem.conf
@@ -33,6 +33,18 @@ server {
 		root ./www/;
 		index index.html;
 	}
+	location /not {
+		root ./www/;
+		autoindex off;
+	}
+	location /varyes {
+		root ./var/;
+		autoindex on;
+	}
+	location /wwwyes {
+		root ./www/;
+		autoindex on;
+	}
 }
 
 server {
