need to clean post

--- a/default.conf
+++ b/default.conf
@@ -10,8 +10,8 @@ server {
 
 server {
 	listen 127.0.0.1:7003;
-	root ./var/test;
-	index one.html;
+	root ./www/;
+	index index.html;
 	location /www {
 		root ./www/;
 		deny DELETE POST;
