parsing works as expected

--- a/configs/simplem.conf
+++ b/configs/simplem.conf
@@ -4,6 +4,8 @@ server {
 	root ./var;
 	index index.html;
 
+	client_max_body_size 1G;
+
 	error_page 401 /error/401.html;
 	error_page 412 /index.html;
 	error_page 404 /img/confused_man_laptop.jpg;
@@ -64,7 +66,7 @@ server {
 	root ./www;
 	index index.html;
 
-	client_max_body_size 123456789m;
+	client_max_body_size 1024m;
 
 	location /www {
 		root ./var/www/;
