figuered out the missing part in config

--- a/default.conf
+++ b/default.conf
@@ -16,6 +16,11 @@ server {
 		root ./www/;
 		deny DELETE POST;
 	}
+	location /cgi-bin {
+		root ./var/cgi-bin/;
+		autoindex off;
+		cgi_extension cgi;
+	}
 }
 
 server {
