--- a/default.conf
+++ b/default.conf
@@ -6,6 +6,11 @@ server {
 		root ./var/www/;
 		deny DELETE POST;
 	}
+	location /cgi-bin {
+		root ./var/cgi-bin;
+		autoindex on;
+		cgi_extension cgi;
+	}
 }
 
 server {
@@ -16,14 +21,9 @@ server {
 		root ./www/;
 		deny DELETE POST;
 	}
-}
-
-server {
-	listen 127.0.0.1:7003;
-	root ./var/test;
-	index one.html;
-	location /www {
-		root ./www/;
-		deny DELETE POST;
+	location /cgi-bin {
+		root ./var/cgi-bin/;
+		autoindex on;
+		cgi_extension cgi;
 	}
 }
