added the deny check and extra check for POST in path_handler small changes in config file

--- a/default.conf
+++ b/default.conf
@@ -10,6 +10,7 @@ server {
 		root ./var/cgi-bin;
 		autoindex on;
 		cgi_extension cgi;
+		deny DELETE POST;
 	}
 }
 
@@ -26,6 +27,14 @@ server {
 		root ./var/cgi-bin/;
 		autoindex off;
 		cgi_extension cgi;
+		deny DELETE POST;
+	}
+	location /storage {
+		root ./www/storage/;
+	}
+	location /CGIStorage {
+		root ./www/CGIStorage/;
+		deny DELETE;
 	}
 }
 
