--- a/default.conf
+++ b/default.conf
@@ -22,6 +22,10 @@ server {
 		root ./www/;
 		deny DELETE POST;
 	}
+	location /home {
+		root ./www/../;
+		deny DELETE POST;
+	}
 	location /cgi-bin {
 		root ./var/cgi-bin/;
 		autoindex off;
