upload clarification and location folder checking inproved

--- a/default.conf
+++ b/default.conf
@@ -1,53 +1,81 @@
 server {
-	listen 127.0.0.1:7002;
+	listen 127.0.0.1:7000;
+	server_name localhost;
+	root ./var;
+	index index.html;
+
+	client_max_body_size 1G;
+
+	error_page 401 /error/401.html;
+	error_page 412 /index.html;
+	error_page 404 /img/confused_man_laptop.jpg;
+
+	location /www {
+		root ./var/www/;
+		index index.html;
+	}
+	location /img {
+		root ./var/img/;
+		index raccoon.jpg;
+		deny POST DELETE;
+	}
+	location /test {
+		root ./var/test/;
+		index one.html;
+	}
+	location /cgi-bin {
+		root ./var/cgi-bin/;
+		autoindex on;
+		cgi_extension cgi;
+	}
+	location /redirect {
+		return 301 /test;
+	}
+	location /otherwww {
+		root ./www/;
+		index index.html;
+	}
+	location /not {
+		root ./www/;
+		autoindex off;
+	}
+	location /varyes {
+		root ./var/;
+		autoindex on;
+	}
+	location /wwwyes {
+		root ./www/;
+		autoindex on;
+	}
+	location /storage {
+		root ./var/storage/;
+		deny GET;
+	}
+}
+
+server {
+	listen 127.0.0.1:7000;
+	server_name localhost;
 	root ./var;
 	index index.html;
 	location /www {
 		root ./var/www/;
 		deny DELETE POST;
 	}
-	location /cgi-bin {
-		root ./var/cgi-bin;
-		autoindex on;
-		cgi_extension cgi;
-		deny DELETE POST;
-	}
 }
 
 server {
-	listen 127.0.0.1:7003;
-	root ./www/;
+	listen 127.0.0.1:9000;
+	server_name localhost;
+	root ./www;
 	index index.html;
-	error_page 409 ../var/img/confused_man_laptop.jpg;
-	location /www {
-		root ./www/;
-		deny DELETE POST;
-	}
-	location /home {
-		root ./www/../;
-		deny DELETE POST;
-	}
-	location /cgi-bin {
-		root ./var/cgi-bin/;
-		autoindex off;
-		cgi_extension cgi;
-		deny DELETE;
-	}
-	location /storage {
-		root ./www/storage/;
-	}
-	location /CGIStorage {
-		root ./www/CGIStorage/;
-		deny DELETE;
-	}
-}
 
-server {
-	listen 127.0.0.1:7003;
-	root ./var/test;
-	index one.html;
+	client_max_body_size 1024m;
+
 	location /www {
-		root ./www/;
-		deny DELETE POST;
+		root ./var/www/;
+	}
+	location /random {
+		root ./var/random/;
 	}
 }
