upload bullet proof and delete cgi implemented

--- a/default.conf
+++ b/default.conf
@@ -49,7 +49,10 @@ server {
 	}
 	location /storage {
 		root ./var/storage/;
-		deny GET;
+	}
+	location /CGIStorage {
+		root ./var/CGIStorage/;
+		autoindex on;
 	}
 }
 
